--- a/jfeo.css
+++ b/jfeo.css
@@ -1,4 +1,8 @@
-body {
+/* body {
     background:url(https://source.unsplash.com/IUttfjXcaA4);
-    background-size: 100%;
+    width: 100%;
+} */
+
+html{
+    height:100%
 }
