--- a/jfeo.css
+++ b/jfeo.css
@@ -9,7 +9,6 @@ html{
 
 .card {
    margin-top: 2.5%;
-   height:30%;
    border: 2px solid black; 
    /* display: flex;
    flex-direction: row;
@@ -18,6 +17,7 @@ html{
 
 .options {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: flex-start;
 }
