--- a/jfeo.css
+++ b/jfeo.css
@@ -1,6 +1,8 @@
 body {
-    background:url(https://source.unsplash.com/IUttfjXcaA4);
-    width: 100%;
+    background: #0B486B;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 html{
@@ -10,9 +12,6 @@ html{
 .card {
    margin-top: 2.5%;
    border: 2px solid black; 
-   /* display: flex;
-   flex-direction: row;
-   flex-wrap: nowrap; */
 }
 
 .options {
@@ -20,4 +19,8 @@ html{
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: flex-start;
+}
+
+.navbar-brand {
+    float: right;
 }
