--- a/jfeo.css
+++ b/jfeo.css
@@ -52,3 +52,8 @@ html{
     display: inline-block;
     
 }
+
+.display-4 {
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+}
