'mo features, 'mo problems

--- a/jfeo.css
+++ b/jfeo.css
@@ -2,7 +2,7 @@ body {
     background: #0B486B;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    margin: 2.5%;
 }
 
 html{
@@ -28,7 +28,7 @@ html{
 
 .card-body {
     max-height: 200px;
-    margin-bottom: 5px;
+    margin-bottom: 5px; 
 }
 
 .jumbotron.jumbotron-fluid {
@@ -40,8 +40,6 @@ html{
 }
 
 .makeshiftFooter {
-    /* background: #F56217;
-    color: white; */
     text-align: center;
     height: 40px;
     color:white;
@@ -56,4 +54,8 @@ html{
 .display-4 {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
+    color: #F56217;
+    outline-offset: 5%;
+    outline-color:white;
+    float: left;
 }
