added weather widget

--- a/jfeo.css
+++ b/jfeo.css
@@ -1,7 +1,7 @@
 body {
     background: #52c234;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #061700, #52c234);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, #061700, #52c234); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
     
 
 }
@@ -35,6 +35,7 @@ html{
     border: 2px solid lightgrey;
     shape-margin: 5%;
     background: whitesmoke;
+    border-radius: 15px;
 }
 
 .card-title {
@@ -70,13 +71,9 @@ html{
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     color: white;
+}
     
+
+.weatherwidget-io {
+    border-radius: 15px;
 }
-
-marquee {
-   font-family: 'Times New Roman', Times, serif;
-   font-size: 250%; 
-   color: aliceblue
-}
-
-
