--- a/jfeo.css
+++ b/jfeo.css
@@ -1,8 +1,8 @@
 body {
-    background: #52c234;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #061700, #52c234);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #061700, #52c234); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
-    
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            
 
 }
 
@@ -32,10 +32,10 @@ html{
 
 .card-body {
     height: 15vw;
-    border: 2px solid lightgrey;
+    border: 2px solid rgb(29, 21, 21);
     shape-margin: 5%;
     background: whitesmoke;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
 .card-title {
@@ -75,5 +75,9 @@ html{
     
 
 .weatherwidget-io {
-    border-radius: 15px;
+    border-radius: 10px;
+}
+
+.bg-dark {
+    background: black
 }
