--- a/jfeo.css
+++ b/jfeo.css
@@ -9,7 +9,6 @@ html{
 }
 
 .card {
-   margin-top: 7.5%;
    border: 2px solid whitesmoke;
    shape-margin: 5%;
 }
@@ -82,6 +81,19 @@ h1 {
     text-shadow: 4px 4px black;
 }
 
-h6 {
-    text-align: left;
+.navbar2 {
+    background: pink;
+}
+
+.footer {
+    position: relative;
+    font-size: 1rem;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: #8E0E00;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #1F1C18, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: white;
+    text-align: center;
 }
