eng to fre on click

--- a/jfeo.css
+++ b/jfeo.css
@@ -112,8 +112,16 @@ html{
     text-align: center;
 }
 
-#btn {
+#btn1 {
     background: royalblue;
+    position: relative;
+    color: white
+}
+
+#btn2 {
+    background: red;
+    position: relative;
+    color: white;
 }
 
 
