--- a/jfeo.css
+++ b/jfeo.css
@@ -4,21 +4,9 @@ body {
 }
 
 html{
-    height:100%
+    height:100%;
+    width: 100%;
 }
-
-.card {
-   border: 1px solid white;
-   shape-margin: 5%;
-}
-
-.options {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: flex-start;
-}
-
 
 .card-img-top {
     width: 100%;
@@ -46,8 +34,9 @@ html{
 }
 
 .display-4 {
-    font-family: 'Roboto Condensed', sans-serif;;
-    font-size: 3rem;
+    font-family: 'Roboto Condensed', sans-serif;
+    opacity: .9;
+    font-size: 2.5rem;
     text-shadow: 1px 1px 2px red, 0 0 .5em blue, 0 0 0.1em blue;
     text-align: center;
     color: white;
@@ -56,13 +45,26 @@ html{
 
 .navbar {
     background-image: url("softballfield.jpg");
+    opacity: .8;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
 
 }
 
+#cardHolder {
+    display: flex;
+    opacity: .8;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+}
+
 
 .footer {
+    opacity: .9;
+    bottom: 0px;
     border-top: 100px;
     width: 100%;
     background-image: url("softballfield.jpg");
@@ -70,46 +72,7 @@ html{
     text-align: center;
 }
 
-.card-body1 {
-    background: white;
-}
 
-.card-body2 {
-    background: white;
-}
-
-.card-body3 {
-    background: white;
-}
-
-.card-body4 {
-    background: white;
-}
-
-#card-title1 {
-    text-align: center;
-}
-
-#card-title2 {
-    text-align: center;
-}
-
-#card-title3 {
-    text-align: center;
-}
-
-#card-title4 {
-    text-align: center;
-}
-
-#card-text4 {
-    text-align: center;
-}
-
-#wrap {
-    width:150px;
-    text-align: center;
-}
 
 #btn1 {
 
@@ -119,22 +82,16 @@ html{
 }
 
 #btn2 {
-    height: 40px;
     background: red;
     color: white;
 
 }
 
-#headline {
-    text-align: center;
-    font-size: 2rem;
-}
 
 hr {
     height: 2.5%;
 }
 
 .btn-group {
-    position: sticky;
     left: 54%;
 }
