--- a/jfeo.css
+++ b/jfeo.css
@@ -35,7 +35,6 @@ html{
 
 .display-4 {
     font-family: 'Roboto Condensed', sans-serif;
-    opacity: .9;
     font-size: 2.5rem;
     text-shadow: 1px 1px 2px red, 0 0 .5em blue, 0 0 0.1em blue;
     text-align: center;
@@ -63,6 +62,7 @@ html{
 
 
 .footer {
+    margin-top: 2.5%;
     opacity: .9;
     bottom: 0px;
     border-top: 100px;
@@ -92,6 +92,4 @@ hr {
     height: 2.5%;
 }
 
-.btn-group {
-    left: 54%;
-}
+
