--- a/jfeo.css
+++ b/jfeo.css
@@ -5,12 +5,12 @@ body {
 
 html{
     height:100%;
-    width: 100%;
 }
 
 .card-img-top {
+    opacity: 1;
     width: 100%;
-    height: 30vw;
+    height: 50vw;
     object-fit: cover;
 }
 
@@ -20,7 +20,7 @@ html{
 }
 
 .card-text {
-    text-align: center;
+    text-align: left;
     background: white;
 }
 
@@ -91,5 +91,6 @@ html{
 hr {
     height: 2.5%;
 }
+
 
 
